kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: homework
  labels:
    app: webserver
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: nginx:1.26.0-bookworm
          ports:
            - containerPort: 8000
              name: webserver-port
          volumeMounts:
            - name: homework-vol
              mountPath: /homework
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/
              readOnly: true
          lifecycle:
            preStop:
              exec:
                command: ["rm", "-f", "/homework/index.html"]
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

      volumes:
        - name: homework-vol
          emptyDir: 
            sizeLimit: 250Mi
        - name: nginx-conf
          configMap:
            name: nginx-config

      nodeSelector:
        homework: "true"
